--- a/PCBmeas.tex
+++ b/PCBmeas.tex
@@ -41,8 +41,16 @@ Three filters were placed before lead collimator - Cu (255 $\mu$m), Al (780 $\mu
 \end{figure}
 
 
-It can be seen, that the noise in spectrum is much lesser than in case of ORTEC setups. The part of 6.4 keV peak can be also seen. Various ways were performed in order to reduce noise - cooling by ice, improving the shielding etc. However, none of them resulted into 6.4 keV energy peak without noise. Main part of remaining noise probably arises from Si PIN diode capacity ($C_{\textrm{S14605}} \approx 25$ pF). This fact can be confirmed by using the same PCB with photodiode with smaller capacity (for example BPW34, $C_{\textrm{BPW34}} \approx 10$ pF). Spectra of BPW34 attached to PCB can be seen in the Fig.
+It can be seen, that the noise in spectrum is much lesser than in case of ORTEC setups. The part of 6.4 keV peak can be also seen. Various ways were performed in order to reduce noise - cooling by ice, improving the shielding etc. However, none of them resulted into 6.4 keV energy peak without noise. Main part of remaining noise probably arises from Si PIN diode capacity ($C_{\textrm{S14605}} \approx 25$ pF). This fact can be confirmed by using the same PCB with photodiode with smaller capacity (for example BPW34, $C_{\textrm{BPW34}} \approx 10$ pF). Spectra of BPW34 attached to the integrated amplifier can be seen in the Figure \ref{BPW34 integrated amplifier spectra.}.
 
+
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.125, angle = 0]{./pictures/NoPicture.jpg}
+\caption{Spectra of BPW34 attached to the integrated amplifier.}
+\label{BPW34 integrated amplifier spectra.}
+
+\end{figure}
 
 
 \section{Scintillator and gaseous detector measurement}
