--- a/citations.bib
+++ b/citations.bib
@@ -295,3 +295,10 @@ url       = {https://geant4.web.cern.ch/},
 urldate = {2024-4-22}, 
 language     = {english}
 }
+@online{Shapflify,
+author  = {ORTEC},
+title     = {Introduction to Amplifiers},
+url       = {https://www.ortec-online.com/-/media/ametekortec/other/amplifier-introduction.pdf},
+urldate = {2024-4-22}, 
+language     = {english}
+}
