--- a/gammaRays.tex
+++ b/gammaRays.tex
@@ -5,7 +5,7 @@
 % -----------------------------------------------
 \chapter{Gamma rays properties and matter interaction}
 % -----------------------------------------------
-
+\label{gammas}
 
 % -----------------------------------------------
 \section{Gamma emission}
@@ -132,6 +132,7 @@ Negative effects arising from this type of interaction like creation of single a
 
 
 \subsection{Characteristic energy spectra}
+\label{char}
 Every gamma source emits its characteristic photons with certain probabilities. However, before these photons are captured by detector, many effects can occur in environment or inside the detector - photons can interact various materials without detection purpose such as shielding, spectrum can be altered by 
 noise events in detector etc.
 \par
