--- a/Mossbauer.tex
+++ b/Mossbauer.tex
@@ -119,7 +119,7 @@ There are two properties of MS spectra which characterize its quality: SNR and t
 
 \begin{equation}
 \begin{aligned}
-\textrm{SNR} = \frac{I}{\sqrt{B}}
+\textrm{SNR}_{\textrm{MS}} = \frac{I}{\sqrt{B}}
 \end{aligned}
 \label{SNR}
 \end{equation}
